[gd_scene load_steps=33 format=3 uid="uid://dk7hulw0lliyx"]

[ext_resource type="Script" path="res://game/scripts/game.gd" id="1_4mk70"]
[ext_resource type="FontFile" uid="uid://tist4tiy7dny" path="res://game/asset/PICO-8.ttf" id="2_bfbr2"]
[ext_resource type="FontFile" uid="uid://cnvt8vlhoyj1d" path="res://game/asset/monogram.ttf" id="2_phegq"]
[ext_resource type="Texture2D" uid="uid://c5mg85mfs4atw" path="res://game/asset/floor_spot.png" id="3_jdgb7"]
[ext_resource type="Texture2D" uid="uid://ctcqwbxebrbuk" path="res://game/asset/punchbag.png" id="4_b7bkk"]
[ext_resource type="Texture2D" uid="uid://b8l4v71udi62w" path="res://game/asset/player.png" id="5_h73td"]
[ext_resource type="Texture2D" uid="uid://bxy2cm51adn7i" path="res://game/asset/pear36-1x.png" id="6_p3h3s"]
[ext_resource type="Texture2D" uid="uid://od0xywcbfmfm" path="res://game/asset/arrow_sheet.png" id="7_n4lm5"]
[ext_resource type="Script" path="res://game/scripts/stopwatch.gd" id="8_wx1cf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8awx5"]
atlas = ExtResource("4_b7bkk")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y43qc"]
atlas = ExtResource("4_b7bkk")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1px8b"]
atlas = ExtResource("4_b7bkk")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohmmd"]
atlas = ExtResource("4_b7bkk")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxre2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8awx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y43qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1px8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohmmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1px8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8awx5")
}],
"loop": false,
"name": &"hit",
"speed": 35.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mb3wh"]
atlas = ExtResource("5_h73td")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7imrl"]
atlas = ExtResource("5_h73td")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kfny"]
atlas = ExtResource("5_h73td")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bbf8"]
atlas = ExtResource("5_h73td")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_miped"]
atlas = ExtResource("5_h73td")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irxgl"]
atlas = ExtResource("5_h73td")
region = Rect2(80, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_88ot1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb3wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7imrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kfny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bbf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miped")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irxgl")
}],
"loop": false,
"name": &"punch",
"speed": 35.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cpadh"]
atlas = ExtResource("6_p3h3s")
region = Rect2(16, 0, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbdkr"]
atlas = ExtResource("6_p3h3s")
region = Rect2(7, 0, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldff7"]
atlas = ExtResource("7_n4lm5")
region = Rect2(0, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp8t5"]
atlas = ExtResource("7_n4lm5")
region = Rect2(8, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l88x1"]
atlas = ExtResource("7_n4lm5")
region = Rect2(16, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3578"]
atlas = ExtResource("7_n4lm5")
region = Rect2(24, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0ij6"]
atlas = ExtResource("7_n4lm5")
region = Rect2(32, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_evkx2"]
atlas = ExtResource("7_n4lm5")
region = Rect2(40, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aih5m"]
atlas = ExtResource("7_n4lm5")
region = Rect2(48, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnvpq"]
atlas = ExtResource("7_n4lm5")
region = Rect2(56, 0, 8, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_usssy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldff7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp8t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l88x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3578")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0ij6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evkx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aih5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnvpq")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Game" type="Node2D"]
script = ExtResource("1_4mk70")

[node name="StartScreen" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="StartScreen"]
offset_right = 155.0
offset_bottom = 156.0
color = Color(0.113725, 0.168627, 0.32549, 1)

[node name="Label4" type="Label" parent="StartScreen"]
offset_left = 41.0
offset_top = 39.0
offset_right = 193.0
offset_bottom = 72.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_bfbr2")
theme_override_font_sizes/font_size = 24
text = "one jab"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="StartScreen"]
offset_left = 36.0
offset_top = 103.0
offset_right = 186.0
offset_bottom = 120.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_bfbr2")
text = "[Z] start"
horizontal_alignment = 1

[node name="Label9" type="Label" parent="StartScreen"]
offset_left = 33.0
offset_top = 114.0
offset_right = 183.0
offset_bottom = 131.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_bfbr2")
text = "[x] info"
horizontal_alignment = 1

[node name="Info" type="Node2D" parent="StartScreen"]
visible = false

[node name="ColorRect" type="ColorRect" parent="StartScreen/Info"]
offset_right = 155.0
offset_bottom = 156.0
color = Color(0.113725, 0.168627, 0.32549, 1)

[node name="Label8" type="Label" parent="StartScreen/Info"]
offset_left = 20.0
offset_top = 23.0
offset_right = 320.0
offset_bottom = 165.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("2_phegq")
theme_override_font_sizes/font_size = 32
text = "Goal:
Hit 20 bags

Controls:
[Z] to move, [X] to punch
"
horizontal_alignment = 1

[node name="Label9" type="Label" parent="StartScreen/Info"]
offset_left = 44.0
offset_top = 125.0
offset_right = 212.0
offset_bottom = 151.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("2_phegq")
theme_override_font_sizes/font_size = 32
text = "[X] to go back
"
horizontal_alignment = 1

[node name="PlayScreen" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="PlayScreen"]
offset_left = -2.0
offset_top = 99.0
offset_right = 156.0
offset_bottom = 152.0
color = Color(0.113725, 0.168627, 0.32549, 1)

[node name="ColorRect2" type="ColorRect" parent="PlayScreen"]
offset_left = -6.0
offset_top = -5.0
offset_right = 166.0
offset_bottom = 99.0
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="PlayScreen"]
position = Vector2(14, 106)
texture = ExtResource("3_jdgb7")

[node name="Sprite2D2" type="Sprite2D" parent="PlayScreen"]
position = Vector2(34, 106)
texture = ExtResource("3_jdgb7")

[node name="Sprite2D3" type="Sprite2D" parent="PlayScreen"]
position = Vector2(54, 106)
texture = ExtResource("3_jdgb7")

[node name="Sprite2D4" type="Sprite2D" parent="PlayScreen"]
position = Vector2(74, 106)
texture = ExtResource("3_jdgb7")

[node name="Sprite2D5" type="Sprite2D" parent="PlayScreen"]
position = Vector2(94, 106)
texture = ExtResource("3_jdgb7")

[node name="Sprite2D6" type="Sprite2D" parent="PlayScreen"]
position = Vector2(114, 106)
texture = ExtResource("3_jdgb7")

[node name="Sprite2D7" type="Sprite2D" parent="PlayScreen"]
position = Vector2(134, 106)
texture = ExtResource("3_jdgb7")

[node name="lblHits" type="Label" parent="PlayScreen"]
offset_left = 133.0
offset_top = -1.0
offset_right = 145.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(5.725, 8.385)
theme_override_fonts/font = ExtResource("2_bfbr2")
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PunchingBag" type="AnimatedSprite2D" parent="PlayScreen"]
position = Vector2(14, 84)
sprite_frames = SubResource("SpriteFrames_pxre2")
animation = &"hit"

[node name="Label8" type="Label" parent="PlayScreen"]
offset_left = 4.0
offset_top = 125.0
offset_right = 52.0
offset_bottom = 138.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_bfbr2")
text = "[Z] move"

[node name="LblTime" type="Label" parent="PlayScreen"]
offset_left = 49.0
offset_top = 6.0
offset_right = 97.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_bfbr2")
text = "00:00:00"

[node name="Label9" type="Label" parent="PlayScreen"]
offset_left = 90.0
offset_top = 125.0
offset_right = 140.0
offset_bottom = 142.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_bfbr2")
text = "[x] jab"

[node name="Player" type="AnimatedSprite2D" parent="PlayScreen"]
position = Vector2(32, 88)
sprite_frames = SubResource("SpriteFrames_88ot1")
animation = &"punch"

[node name="TextureProgressBar" type="TextureProgressBar" parent="PlayScreen"]
offset_left = -90.0
offset_top = 15.0
offset_right = -10.0
offset_bottom = 20.0
value = 34.0
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_cpadh")
texture_progress = SubResource("AtlasTexture_bbdkr")

[node name="marker" type="AnimatedSprite2D" parent="PlayScreen"]
position = Vector2(118, 59)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_usssy")
frame_progress = 0.0975982

[node name="Stopwatch" type="Node" parent="PlayScreen"]
script = ExtResource("8_wx1cf")

[node name="GameOver" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="GameOver"]
offset_right = 156.0
offset_bottom = 153.0
color = Color(0.113725, 0.168627, 0.32549, 1)

[node name="Label8" type="Label" parent="GameOver"]
offset_left = 36.0
offset_top = 107.0
offset_right = 235.0
offset_bottom = 124.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(1, 1, 0.921569, 1)
theme_override_fonts/font = ExtResource("2_bfbr2")
text = "[x]/[c] to retry"

[node name="LblTime" type="Label" parent="GameOver"]
offset_left = 16.0
offset_top = 37.0
offset_right = 316.0
offset_bottom = 173.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(1, 1, 0.921569, 1)
theme_override_fonts/font = ExtResource("2_bfbr2")
theme_override_font_sizes/font_size = 32
text = "0:20:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LblMisses" type="Label" parent="GameOver"]
offset_left = -161.0
offset_top = 68.0
offset_right = 139.0
offset_bottom = 158.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 0.921569, 1)
theme_override_fonts/font = ExtResource("2_phegq")
theme_override_font_sizes/font_size = 32
text = "Misses: 00"
horizontal_alignment = 1
vertical_alignment = 1
